Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,17 @@
+
 .App {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .main{
   padding: 5.5rem;
 }
 @media  (max-width: 768px){
+ 
   .main{
     padding: 0.5rem;
   }
