--- a/src/styles/ProductShowcase.css
+++ b/src/styles/ProductShowcase.css
@@ -151,7 +151,6 @@
 .grid-wishlist-icon {
     position: absolute;
     top: 5%;
-    left: -40px; 
     background-color: white;
     padding: 10px;
     transition: opacity 0.7s ease-in-out, left 0.5s ease-in-out; 
